Task #28524 - Design fixes for checkboxes + Shopping Cart (allow text wrapping)

--- a/src/pages/cart/ShoppingCart/ShoppingCart.scss
+++ b/src/pages/cart/ShoppingCart/ShoppingCart.scss
@@ -75,7 +75,7 @@ $side-padding: 24px;
                         div {
                             opacity: 0.6;
                             padding: 3px 0;
-                            white-space: nowrap;
+                            white-space: normal;
 
                             &:first-child {
                                 padding-top: 2px;
